--- a/src/main/resources/templates/ContestsView.html
+++ b/src/main/resources/templates/ContestsView.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title th:text="#{page.title.home}">Title (design)</title>
+    <title th:text="#{page.title.contests}">Title (design)</title>
     <th:block th:replace="~{fragments/head :: head}"></th:block>
 </head>
 
