add PhotoJunkiesView.html, OptionalWithSizeConstraint, OptionalWithSizeConstraintValidator. add PhotoJunkiesView.html, PhotoCreateView.html

--- a/src/main/resources/templates/PhotoCreateView.html
+++ b/src/main/resources/templates/PhotoCreateView.html
@@ -8,7 +8,7 @@
 <body class="user-view d-flex flex-column min-vh-100">
 <header th:replace="~{fragments/navbar :: header(context='photo-create')}"></header>
 
-<div class="container mt-5">
+<div class="container mt-5 mb-4">
   <form th:replace="~{fragments/photo-form-new :: photo-form-new(context='create')}"></form>
 </div>
 
