--- a/src/main/resources/templates/UserView.html
+++ b/src/main/resources/templates/UserView.html
@@ -32,6 +32,11 @@
               <i class="bi bi-envelope-fill me-2"></i>
               <span th:text="${user.email}">Email Address</span>
             </div>
+            <div class="form-group d-flex align-items-center mb-3">
+              <i class="bi bi-person-badge me-2"></i>
+              <span th:if="${!user.isOrganizer}" th:text="${user.rank.name}">Rank</span>
+              <span th:if="${user.isOrganizer}" th:text="#{user.organizer}">Rank</span>
+            </div>
           </div>
         </div>
         <div th:if="${session.isAuthenticated && (session.user.isOrganizer() || session.currentUser == user.username)}"
