--- a/src/main/resources/templates/UsersView.html
+++ b/src/main/resources/templates/UsersView.html
@@ -2,42 +2,45 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title th:text="#{user-form.login}">Photo Contest</title>
+    <title th:text="#{user-form.users}">Photo Contest</title>
     <th:block th:replace="~{fragments/head :: head}"></th:block>
 </head>
 
 <body class="users-view d-flex flex-column min-vh-100">
-<header th:replace="~{fragments/navbar :: header(context='users')}"></header>
-<table class="table table-hover table-striped container mx-auto my-3">
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Email</th>
-        <th>Username</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="user : ${users}">
-        <td><a href="#" th:href="@{/users/{id}(id=${user.id})}"><i
-                class="bi bi-person-vcard text-dark" style="font-size: 2rem;"></i></a>
-        </td>
-        <td th:text="${user.firstName}"></td>
-        <td th:text="${user.lastName}"></td>
-        <td th:text="${user.email}"></td>
-        <td th:text="${user.username}"></td>
-    </tr>
-    </tbody>
-</table>
-<nav aria-label="Page navigation"
-     th:if="${totalPages > 0}"
-     th:with="pageQuery=${'?page='},
-                  sizeQuery=${'&size='},
-                  linkQuery=${sizeQuery + sizePage}">
+<div class="container px-4 py-5" id="custom-cards">
+    <header th:replace="~{fragments/navbar :: header(context='users')}"></header>
+    <h3 class="pb-2 text-center display-2" th:text="${!users.isEmpty() ? 'Users' : 'No Users'}">Users (design)</h3>
+    <table class="table table-hover table-striped container mx-auto my-3">
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th>Username</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="user : ${users}">
+            <td><a href="#" th:href="@{/users/{id}(id=${user.id})}"><i
+                    class="bi bi-person-vcard text-dark" style="font-size: 2rem;"></i></a>
+            </td>
+            <td th:text="${user.firstName}"></td>
+            <td th:text="${user.lastName}"></td>
+            <td th:text="${user.email}"></td>
+            <td th:text="${user.username}"></td>
+        </tr>
+        </tbody>
+    </table>
+    <nav aria-label="Page navigation"
+         th:if="${totalPages > 0}"
+         th:with="pageQuery=${'?page='},
+                      sizeQuery=${'&size='},
+                      linkQuery=${sizeQuery + sizePage}">
 
-    <ul th:replace="~{fragments/pagination :: pagination}"></ul>
-</nav>
+        <ul th:replace="~{fragments/pagination :: pagination}"></ul>
+    </nav>
+</div>
 
 
 
