feat: Implemented ContestCreateView.html

--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -75,6 +75,11 @@ body {
     border-top: none !important;
 }
 
+/*CREATE CONTEST*/
+.spinner-border {
+    display: none;
+}
+
 /*PAGINATION*/
 .page-link {
     position: relative;
