feat: Implemented ContestUpdateView.html

--- a/src/main/resources/templates/ContestView.html
+++ b/src/main/resources/templates/ContestView.html
@@ -17,8 +17,8 @@
       <div class="col col-xl-8 mx-auto position-relative">
         <div class="position-absolute top-0 start-50 translate-middle" th:if="${phase1}">
           <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-            <button type="button" class="btn btn-outline-warning"><i class="bi bi-pencil-square"></i></button>
-            <button type="button" class="btn btn-outline-danger"><i class="bi bi-x-square"></i></button>
+            <a href="#" class="btn btn-outline-warning" th:href="@{${requestURI} + '/update'}"><i class="bi bi-pencil-square"></i></a>
+            <a href="#" class="btn btn-outline-danger" th:href="@{${requestURI} + '/delete'}"><i class="bi bi-x-square"></i></a>
           </div>
         </div>
         <h1 class="fw-light neon-text display-1" th:text="${contest.title}">Contest title (design)</h1>
@@ -163,19 +163,23 @@
         <img class="img-fluid" src="#" alt="#">
       </div>
       <div class="modal-footer">
-        <div class="btn-group">
-          <button class="btn btn-warning" type="button">Copy URL</button>
-          <button class="btn btn-outline-warning copy-btn" type="button"><i class="bi bi-clipboard-fill"></i></button>
+        <div class="d-flex gap-2 w-100 justify-content-between py-1">
+          <div class="btn-group">
+            <button class="btn btn-warning" type="button">Story</button>
+            <button class="btn btn-outline-warning photo-story" type="button"></button>
+          </div>
+          <div>
+            <div class="btn-group pt-1">
+              <button class="btn btn-warning" type="button">Copy URL</button>
+              <button class="btn btn-outline-warning copy-btn" type="button"><i class="bi bi-clipboard-fill"></i></button>
+            </div>
+            <div class="btn-group pt-1">
+              <button class="btn btn-warning" type="button">Open IMG</button>
+              <a href="#" class="btn btn-outline-warning" target="_blank"><i class="bi bi-image-fill"></i></a>
+            </div>
+          </div>
+          </div>
         </div>
-        <div class="btn-group">
-          <button class="btn btn-warning" type="button">Open Image</button>
-          <a href="#" class="btn btn-outline-warning" target="_blank"><i class="bi bi-image-fill"></i></a>
-        </div>
-        <button class="btn btn-warning rounded-circle p-2 lh-1" type="button" data-bs-dismiss="modal">
-          <i class="bi bi-x-lg"></i>
-          <span class="visually-hidden">Close</span>
-        </button>
-      </div>
     </div>
   </div>
 </div>
