--- a/src/main/resources/templates/ContestUpdateView.html
+++ b/src/main/resources/templates/ContestUpdateView.html
@@ -2,23 +2,23 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <title th:text="#{page.title.contest-create}">Title (design)</title>
+  <title th:text="#{page.title.contest-update}">Title (design)</title>
   <th:block th:replace="~{fragments/head :: head}"></th:block>
 </head>
 
 <body class="contest-create-view d-flex flex-column min-vh-100">
-<header th:replace="~{fragments/navbar :: header(context='contest-create')}"></header>
+<header th:replace="~{fragments/navbar :: header(context='contest-update')}"></header>
 <main>
 
   <div class="container mt-3">
     <div class="text-center overflow-hidden mb-5">
       <div class="my-3">
-        <h2 class="display-4">Create contest</h2>
+        <h2 class="display-4">Update contest</h2>
       </div>
       <div class="bg-dark shadow-sm mx-auto rounded">
         <div class="w-75 p-3 mx-auto">
 
-          <form th:replace="~{fragments/contest-form :: contest-create(context='contest-create')}"></form>
+          <form th:replace="~{fragments/contest-form :: contest-create(context='contest-update')}"></form>
 
         </div>
       </div>
