--- a/src/main/resources/templates/fragments/user-form.html
+++ b/src/main/resources/templates/fragments/user-form.html
@@ -60,13 +60,13 @@
     </div>
   </div>
 
-  <button class="w-100 btn btn-lg btn-primary" type="submit" name="action" value="login" th:if="${ctxLogin}">
+  <button class="w-100 btn btn-lg btn-warning" type="submit" name="action" value="login" th:if="${ctxLogin}">
     Login
   </button>
-  <button class="w-100 btn btn-lg btn-primary" type="submit" name="action" value="register" th:if="${ctxRegister}">
+  <button class="w-100 btn btn-lg btn-warning" type="submit" name="action" value="register" th:if="${ctxRegister}">
     Register
   </button>
-  <button class="w-100 btn btn-lg btn-primary" type="submit" name="action" value="update" th:if="${ctxUpdate}">
+  <button class="w-100 btn btn-lg btn-warning" type="submit" name="action" value="update" th:if="${ctxUpdate}">
     Update
   </button>
 </form>
